bk_ida/gccida/g1/expand_return
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3508:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3514:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3516:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3527:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3637:40: error: use of undeclared identifier 'machine_mode'
v15 = expand_expr( ( tree)high, v14, ( machine_mode)*( ( unsigned __int8 *)v14 + 2), EXPAND_NORMAL); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3683:31: error: invalid suffix 'xmode' on integer constant
v29 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3692:18: error: invalid suffix 'xmode' on integer constant
v32 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3705:35: error: invalid suffix 'orce' on integer constant
tmpmode = operand_sub*(short *)0xforce( result_val, v30 / v18, BLKmode); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3705:11: error: use of undeclared identifier 'operand_sub'
tmpmode = operand_sub*(short *)0xforce( result_val, v30 / v18, BLKmode); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3709:18: error: invalid suffix 'xmode' on integer constant
v32 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3719:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3743:18: error: invalid suffix 'xmode' on integer constant
v21 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3744:34: error: invalid suffix 'xmode' on integer constant
if ( v20 >= mode_size[*(short *)0xmode] ) 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/stmt.c:3766:31: error: invalid suffix 'xmode' on integer constant
v22 = gen_reg_rtx( *(short *)0xmode); 
                              ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_return/src/obj/stmt.o] Error 1
